# alicia

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/TestApp/: CMakeLists.txt  TestApp
apps/TestApp/src/: main.cpp
libs/: CMakeLists.txt
libs/test/: CMakeLists.txt
libs/test/inc/: test.h
libs/test/src/: test.cpp
